--- a/self blog/index.css
+++ b/self blog/index.css
@@ -388,7 +388,7 @@ input[type=text], select, textarea {
   }
   .footer{
       width: 100%;
-      height: 20vh;
+      height: 15vh;
       background-color: rgba(48, 23, 23, 0.1);
       display: flex;
       justify-content: space-evenly;
@@ -396,7 +396,11 @@ input[type=text], select, textarea {
   .footer a {
       cursor: pointer;
   }
-  
+  .social_icon {
+      width:10%;
+      height:100%;
+      background-color:white;
+}
 @media screen and (max-width:480px){
     /* home sec beginning */
     .home_txt {
