--- a/self blog/index.css
+++ b/self blog/index.css
@@ -386,7 +386,32 @@ input[type=text], select, textarea {
     display: table;
     clear: both;
   }
-
+.social_icon {
+      /* background-color: aqua; */
+      height: 15vh;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: center;
+  }
+  .ic {
+      width: 15%;
+      height: 40%;
+      border-radius: 20px;
+      background-color: rgba(43, 255, 0, 0.3);
+      text-align: center;
+      padding-top: 7px;
+      
+  }
+  .ic a {
+      text-decoration: none;
+      color: rosybrown;
+  }
+  .ic a:hover {
+      cursor: pointer;
+      color: black;
+  }
 @media screen and (max-width:480px){
     /* home sec beginning */
     .home_txt {
@@ -473,4 +498,13 @@ input[type=text], select, textarea {
         width: 100%;
         margin-top: 0;
       }
+    .ic {
+        width: 15%;
+        height: 40%;
+        border-radius: 20px;
+        background-color: rgba(43, 255, 0, 0.3);
+        text-align: center;
+        padding-top: 7px;
+        font-size: 13px;
+    }
 }
