--- a/self blog/index.css
+++ b/self blog/index.css
@@ -321,7 +321,7 @@ h3 {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 input[type=text], select, textarea {
     width: 100%;
@@ -386,7 +386,8 @@ input[type=text], select, textarea {
     display: table;
     clear: both;
   }
-.social_icon {
+ 
+  .social_icon {
       /* background-color: aqua; */
       height: 15vh;
       width: 100%;
@@ -498,7 +499,7 @@ input[type=text], select, textarea {
         width: 100%;
         margin-top: 0;
       }
-    .ic {
+      .ic {
         width: 15%;
         height: 40%;
         border-radius: 20px;
